fixed overflow in talks section

--- a/src/styles/pages/_schedule.scss
+++ b/src/styles/pages/_schedule.scss
@@ -1,6 +1,5 @@
-.sc__nav {
-  padding: 24px 0 16px;
-  background: $bg-shade-1;
+.schedule__page {
+  overflow: hidden;
 }
 
 .sc__header {
